Bug 104749 - rasterizer/jitter/JitManager.cpp:252:91: error: no matching function for call to ‘llvm::DIBuilder::createBasicType(const char [8], int, llvm::dwarf::TypeKind)’
Summary: rasterizer/jitter/JitManager.cpp:252:91: error: no matching function for call...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/swr (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: George Kyriazis
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks: mesa-18.0
  Show dependency treegraph
 
Reported: 2018-01-23 01:53 UTC by Vinson Lee
Modified: 2018-01-25 17:00 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2018-01-23 01:53:53 UTC
Build error with llvm-3.9.

  CXX      rasterizer/jitter/libmesaswr_la-JitManager.lo
rasterizer/jitter/JitManager.cpp: In member function ‘llvm::DIType* JitManager::GetDebugType(llvm::Type*)’:
rasterizer/jitter/JitManager.cpp:252:91: error: no matching function for call to ‘llvm::DIBuilder::createBasicType(const char [8], int, llvm::dwarf::TypeKind)’
     case Type::HalfTyID: return builder.createBasicType("float16", 16, dwarf::DW_ATE_float); break;
                                                                                           ^
Comment 1 Juan A. Suarez 2018-01-23 18:44:29 UTC
Tracked to:

commit 01ab218bbc5c8058a99077a6bc3dc9884e9d218a
Author: George Kyriazis <george.kyriazis@intel.com>
Date:   Fri Jan 19 15:46:59 2018 -0600

    swr/rast: Initial work for debugging support.
    
    Adds ability to step into jitted llvm IR in Visual Studio.
    - Updated llvm type generation script to also generate corresponding debug types.
    - New module pass inserts debug metadata into the IR for each function
    
    Disabled by default.
    
    Reviewed-by: Bruce Cherniak <bruce.cherniak@intel.com>

 .../swr/rasterizer/codegen/gen_llvm_types.py       |  10 +-
 .../swr/rasterizer/codegen/templates/gen_llvm.hpp  |  12 ++
 .../drivers/swr/rasterizer/jitter/JitManager.cpp   | 157 +++++++++++++++++++--
 .../drivers/swr/rasterizer/jitter/JitManager.h     |  24 ++++
 .../drivers/swr/rasterizer/jitter/builder_misc.cpp |   2 +-
 .../drivers/swr/rasterizer/jitter/jit_pch.hpp      |   2 +-
 6 files changed, 191 insertions(+), 16 deletions(-)
Comment 2 Mark Janes 2018-01-24 14:40:38 UTC
George, can you comment on this?
Comment 3 Emil Velikov 2018-01-24 15:09:52 UTC
Think that I was a few seconds quicker at tracking this down. See

https://lists.freedesktop.org/archives/mesa-dev/2018-January/183028.html
Comment 4 George Kyriazis 2018-01-24 15:26:43 UTC
Patch coming out later today.
Comment 5 Emil Velikov 2018-01-25 17:00:48 UTC
Should be resolved as of

commit 0e879aad2fd1dac102c13d680edf455aa068d5df
Author: George Kyriazis <george.kyriazis@intel.com>
Date:   Tue Jan 23 16:12:42 2018 -0600

    swr/rast: support llvm 3.9 type declarations
    
    LLVM 3.9 was not taken into account in initial check-in.
    
    Fixes: 01ab218bbc ("swr/rast: Initial work for debugging support.")
    cc: mesa-stable@lists.freedesktop.org
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=104749


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.